refactor: update static website

--- a/srcs/requirements/bonus/static-website/tools/index.html
+++ b/srcs/requirements/bonus/static-website/tools/index.html
@@ -8,5 +8,8 @@
 	</head>
 	<body>
 		<h1>Hello World!</h1>
+		<p><a href="https://revieira.42.fr:443">WORDPRESS</a></p>
+		<p><a href="https://revieira.42.fr:443/adminer">ADMINER</a></p>
+		<p><a href="http://revieira.42.fr:3001">UPTIME-KUMA</a></p>
 	</body>
 </html>
